export issue is fixed

--- a/templates/base.html
+++ b/templates/base.html
@@ -12,6 +12,9 @@
     
     {% if current_user.is_authenticated %}
     <li><a href="{{ url_for('search') }}">Get information about a photo</a></li>
+    <li><a href="{{ url_for('update') }}">Update your photo</a></li>
+    <li><a href="{{ url_for('create_searchlist') }}">Create a personal collection of photo analysis</a></li>
+    <li><a href="{{ url_for('all_collections') }}">view collections</a></li>
     <li><a href="{{ url_for('logout') }}">Sign Out {{current_user.name}}</a></li>
     {% else %}
     <a href="{{ url_for('index') }}">Sign In</a>
